# mini-redis-py

./: .gitignore  CLAUDE.md  CfP.md  README.md  WORKSHOP_GUIDE.md  dump.rdb  memo.md  pyproject.toml
.kiro/specs/learning-materials/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/mini-redis-py/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: architecture.md
docs/lectures/: 00-introduction.md  01-tcp-server.md  02-protocol-parsing.md  03-commands.md  04-expiry.md  05-summary.md
mini_redis/: __main__.py  commands.py  expiry.py  protocol.py  server.py  storage.py
solutions/: README.md
solutions/mini_redis/: __init__.py  __main__.py  commands.py  expiry.py  protocol.py  server.py  storage.py
tests/: __init__.py  test_commands.py  test_expiry.py  test_imports.py  test_protocol.py  test_server.py  test_storage.py
tests/step01_tcp_server/: __init__.py  test_echo_server.py
tests/step02_protocol/: __init__.py  test_resp_protocol.py
tests/step03_commands/: __init__.py  test_commands.py  test_storage.py
tests/step04_expiry/: __init__.py  test_commands.py  test_expiry.py  test_storage.py
